Setting width size for photos page because the images you upload may have different sizes so the look of the page may be uneven without this fix.

--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -1,3 +1,7 @@
+.admin-photo-thumbnail {
+  width: 200px;
+}
+
 .photo-info-box {
 
   border: 1px solid #e5e5e5;
